--- a/TGGD_jfabd2/TGGD_jfabd2/TGGD_jfabd2.vbproj
+++ b/TGGD_jfabd2/TGGD_jfabd2/TGGD_jfabd2.vbproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <RootNamespace>TGGD_jfabd2</RootNamespace>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Data.SQLite" Version="1.0.115.5" />
+  </ItemGroup>
 
 </Project>
