when i drop a critter, the item version goes away

--- a/TGGD_jfabd2/TGGD_jfabd2/TGGD_jfabd2.vbproj
+++ b/TGGD_jfabd2/TGGD_jfabd2/TGGD_jfabd2.vbproj
@@ -6,6 +6,14 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\TGGD_jfabd2.Game\TGGD_jfabd2.Game.vbproj" />
   </ItemGroup>
