--- a/TGGD_jfabd2/TGGD_jfabd2.Game/TGGD_jfabd2.Game.vbproj
+++ b/TGGD_jfabd2/TGGD_jfabd2.Game/TGGD_jfabd2.Game.vbproj
@@ -5,6 +5,14 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\TGGD_jfabd2.Data\TGGD_jfabd2.Data.vbproj" />
   </ItemGroup>
