--- a/TGGD_jfabd2/TGGD_jfabd2/TGGD_jfabd2.vbproj
+++ b/TGGD_jfabd2/TGGD_jfabd2/TGGD_jfabd2.vbproj
@@ -4,14 +4,19 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>TGGD_jfabd2</RootNamespace>
     <TargetFramework>net5.0</TargetFramework>
+    <OptionStrict>Off</OptionStrict>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <NoWarn>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</NoWarn>
+    <WarningsAsErrors></WarningsAsErrors>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <NoWarn>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</NoWarn>
+    <WarningsAsErrors></WarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
