main menu and in play

--- a/TGGD_jfabd2/TGGD_jfabd2/TGGD_jfabd2.vbproj
+++ b/TGGD_jfabd2/TGGD_jfabd2/TGGD_jfabd2.vbproj
@@ -20,6 +20,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Terminal.Gui" Version="1.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TGGD_jfabd2.Game\TGGD_jfabd2.Game.vbproj" />
   </ItemGroup>
 
